# dbt-doctools

./: .dockerignore  .env.example  .gitignore  .gitpod.yml  LICENSE  README.md  docker-compose.init-db.yml  docker-compose.init-dbt.yml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
dbt_doctools/: dbt_api.py  docs_ops.py  graph_ops.py  main.py  manifest_tools.py  markdown_ops.py  source_ops.py  yaml_io.py  yaml_ops.py
docker/: Dockerfile  build_local.sh
dummy_dbt_project/: .user.yml  init_db.py  init_dbt.sh  profiles.yml
dummy_dbt_project/dummy/: dbt_project.yml
dummy_dbt_project/dummy/models/downstream/: old_one_layer.sql
dummy_dbt_project/dummy/models/sources/: some_old_source.yml  some_sources.md  some_sources.yml
dummy_dbt_project/dummy/models/zero_layer/: old_zero_layer.sql  schema.md  schema.yml
dummy_dbt_project/dummy/seeds/: some_static_map.csv  some_static_map.md  some_static_map.yml
test_support/: db_fixtures.py  dbt_fixtures.py
tests/: conftest.py  test_db_connection.py  test_dbt_api.py  test_docs_ops.py  test_graph_ops.py  test_manifest_tools.py  test_markdown_ops.py  test_source_ops.py  test_yaml_io.py  test_yaml_ops.py
